add default charset to my.cnf

--- a/my.cnf
+++ b/my.cnf
@@ -1,4 +1,5 @@
 [mysql]
-prompt="\d >"
+prompt=\d >
 # Hack to make less -F work in Terminal.app
 pager=TERM=vt100 less -F
+default-character-set=utf8
