Use mypager.pl as mysql pager

--- a/my.cnf
+++ b/my.cnf
@@ -1,5 +1,4 @@
 [mysql]
 prompt=\d >
-# Hack to make less -F work in Terminal.app
-pager=TERM=vt100 less -F
+pager=mypager.pl
 default-character-set=utf8
